fix client gen code and make dist
