# src/warpbuild/src/models/CommonsContainerRunnerImageVersion.ts
@@ -1,0 +1,149 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Warp Builds API Docs
+ * This is the docs for warp builds api for argonaut
+ *
+ * The version of the OpenAPI document: 0.4.0
+ * Contact: support@swagger.io
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime'
+/**
+ *
+ * @export
+ * @interface CommonsContainerRunnerImageVersion
+ */
+export interface CommonsContainerRunnerImageVersion {
+  /**
+   *
+   * @type {string}
+   * @memberof CommonsContainerRunnerImageVersion
+   */
+  data_dir_size?: string
+  /**
+   *
+   * @type {string}
+   * @memberof CommonsContainerRunnerImageVersion
+   */
+  image_digest?: string
+  /**
+   *
+   * @type {string}
+   * @memberof CommonsContainerRunnerImageVersion
+   */
+  image_repository?: string
+  /**
+   *
+   * @type {string}
+   * @memberof CommonsContainerRunnerImageVersion
+   */
+  image_size?: string
+  /**
+   *
+   * @type {string}
+   * @memberof CommonsContainerRunnerImageVersion
+   */
+  image_tag?: string
+  /**
+   * ImageURI is the full uri of the image.
+   * This can be used to download the image
+   *
+   * +OutputOnly
+   * @type {string}
+   * @memberof CommonsContainerRunnerImageVersion
+   */
+  image_uri?: string
+  /**
+   *
+   * @type {string}
+   * @memberof CommonsContainerRunnerImageVersion
+   */
+  snapshot_id?: string
+  /**
+   *
+   * @type {string}
+   * @memberof CommonsContainerRunnerImageVersion
+   */
+  snapshot_size?: string
+  /**
+   *
+   * @type {string}
+   * @memberof CommonsContainerRunnerImageVersion
+   */
+  volume_id?: string
+  /**
+   * VolumeSizeGB is the size of the volume in GB.
+   * This is used when creating a snapshot out of the volume.
+   *
+   * This is rounded up to the nearest GiB.
+   * @type {number}
+   * @memberof CommonsContainerRunnerImageVersion
+   */
+  volume_size_gb?: number
+}
+
+/**
+ * Check if a given object implements the CommonsContainerRunnerImageVersion interface.
+ */
+export function instanceOfCommonsContainerRunnerImageVersion(
+  value: object
+): value is CommonsContainerRunnerImageVersion {
+  return true
+}
+
+export function CommonsContainerRunnerImageVersionFromJSON(
+  json: any
+): CommonsContainerRunnerImageVersion {
+  return CommonsContainerRunnerImageVersionFromJSONTyped(json, false)
+}
+
+export function CommonsContainerRunnerImageVersionFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): CommonsContainerRunnerImageVersion {
+  if (json == null) {
+    return json
+  }
+  return {
+    data_dir_size:
+      json['data_dir_size'] == null ? undefined : json['data_dir_size'],
+    image_digest:
+      json['image_digest'] == null ? undefined : json['image_digest'],
+    image_repository:
+      json['image_repository'] == null ? undefined : json['image_repository'],
+    image_size: json['image_size'] == null ? undefined : json['image_size'],
+    image_tag: json['image_tag'] == null ? undefined : json['image_tag'],
+    image_uri: json['image_uri'] == null ? undefined : json['image_uri'],
+    snapshot_id: json['snapshot_id'] == null ? undefined : json['snapshot_id'],
+    snapshot_size:
+      json['snapshot_size'] == null ? undefined : json['snapshot_size'],
+    volume_id: json['volume_id'] == null ? undefined : json['volume_id'],
+    volume_size_gb:
+      json['volume_size_gb'] == null ? undefined : json['volume_size_gb']
+  }
+}
+
+export function CommonsContainerRunnerImageVersionToJSON(
+  value?: CommonsContainerRunnerImageVersion | null
+): any {
+  if (value == null) {
+    return value
+  }
+  return {
+    data_dir_size: value['data_dir_size'],
+    image_digest: value['image_digest'],
+    image_repository: value['image_repository'],
+    image_size: value['image_size'],
+    image_tag: value['image_tag'],
+    image_uri: value['image_uri'],
+    snapshot_id: value['snapshot_id'],
+    snapshot_size: value['snapshot_size'],
+    volume_id: value['volume_id'],
+    volume_size_gb: value['volume_size_gb']
+  }
+}
